logs/elements.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Elements-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/elements'...
Compiling './lib/python3.5/site-packages/elements/elements.py'...
***   File "./lib/python3.5/site-packages/elements/elements.py", line 73
    print 'convert_element_tree_to_member(): Unknown member %s' % child_tree.tag
                                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/elements/formats'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/test_date.py'...
***   File "./lib/python3.5/site-packages/tests/test_date.py", line 26
    print repr(e.date)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/test_dictionaries.py'...
***   File "./lib/python3.5/site-packages/tests/test_dictionaries.py", line 65
    print e.datastores1
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/test_strings.py'...
***   File "./lib/python3.5/site-packages/tests/test_strings.py", line 26
    print repr(e.first_name)
             ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
